--- a/style.css
+++ b/style.css
@@ -148,11 +148,18 @@ hr {
 footer {
     background-color: black;
     color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 10%;
 
 }
 
 #orange {
     color: orangered;
+    font-family: 'Lato', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Poppins', sans-serif;
+
 }
 
 #blue {
